// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders correctly 1`] = `
<View
  collapsable={false}
  style={
    {
      "position": "absolute",
      "top": -750,
      "width": "100%",
      "zIndex": 20,
    }
  }
>
  <RCTSafeAreaView>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          {
            "elevation": 8,
            "shadowColor": "#2B191152",
            "shadowOffset": {
              "height": 8,
              "width": 0,
            },
            "shadowOpacity": 0.32,
            "shadowRadius": 8,
          },
          {
            "backgroundColor": "#F56522",
          },
        ]
      }
    >
      <View
        style={
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "marginRight": 8,
                  "width": 20,
                },
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                    "lineHeight": 32,
                    "textAlign": "center",
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            network error
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {
                  "color": "#FFF9F6",
                },
                {
                  "marginTop": 4,
                },
              ],
              false,
            ]
          }
        >
          Peach was unable to connect to the Peach server. Please check your network connection or try again later.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 4,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22.75,
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
             
            testLabel
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "opacity": 1,
              "textAlign": "right",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22.75,
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            close
             
          </Text>
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`Message renders correctly with no action 1`] = `
<View
  collapsable={false}
  style={
    {
      "position": "absolute",
      "top": -750,
      "width": "100%",
      "zIndex": 20,
    }
  }
>
  <RCTSafeAreaView>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          {
            "elevation": 8,
            "shadowColor": "#2B191152",
            "shadowOffset": {
              "height": 8,
              "width": 0,
            },
            "shadowOpacity": 0.32,
            "shadowRadius": 8,
          },
          {
            "backgroundColor": "#F56522",
          },
        ]
      }
    >
      <View
        style={
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "marginRight": 8,
                  "width": 20,
                },
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                    "lineHeight": 32,
                    "textAlign": "center",
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            network error
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {
                  "color": "#FFF9F6",
                },
                {
                  "marginTop": 4,
                },
              ],
              false,
            ]
          }
        >
          Peach was unable to connect to the Peach server. Please check your network connection or try again later.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 4,
            "width": "100%",
          }
        }
      >
        <View />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "opacity": 1,
              "textAlign": "right",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22.75,
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            close
             
          </Text>
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`Message should use default values for missing translations 1`] = `
<View
  collapsable={false}
  style={
    {
      "position": "absolute",
      "top": -750,
      "width": "100%",
      "zIndex": 20,
    }
  }
>
  <RCTSafeAreaView>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          {
            "elevation": 8,
            "shadowColor": "#2B191152",
            "shadowOffset": {
              "height": 8,
              "width": 0,
            },
            "shadowOpacity": 0.32,
            "shadowRadius": 8,
          },
          {
            "backgroundColor": "#F56522",
          },
        ]
      }
    >
      <View
        style={
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "marginRight": 8,
                  "width": 20,
                },
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                    "lineHeight": 32,
                    "textAlign": "center",
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            network error
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {
                  "color": "#FFF9F6",
                },
                {
                  "marginTop": 4,
                },
              ],
              false,
            ]
          }
        >
          Peach was unable to connect to the Peach server. Please check your network connection or try again later.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 4,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22.75,
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
             
            testLabel
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "opacity": 1,
              "textAlign": "right",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22.75,
                  },
                  {
                    "color": "#FFF9F6",
                  },
                ],
                false,
              ]
            }
          >
            close
             
          </Text>
          <test-file-stub
            fill="#FFF9F6"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
